Fix notification overflow

--- a/my-app/src/components/Notifications/Notification.css
+++ b/my-app/src/components/Notifications/Notification.css
@@ -2,7 +2,7 @@
   position: absolute;
   top: 70px;
   right: 10px;
-  width: 400px;
+  max-width: 400px;
   background-color: #222831;
   color: white;
   border-radius: 5px;
@@ -13,7 +13,7 @@
     0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
     0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
     0 100px 80px rgba(0, 0, 0, 0.12);
-  overflow-y: scroll;
+  overflow: auto;
   max-height: calc(100vh - 80px);
 }
 .notification {
@@ -23,6 +23,7 @@
   grid-template-rows: 25px auto 25px;
   padding: 10px 0;
   border-radius: 5px;
+  overflow-wrap: anywhere;
 }
 .notification * {
   align-self: center;
